--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
     header img.logo {
-      height: 60px;
+      height: auto;
       margin: 0 15px;
       vertical-align: middle;
     }
