--- a/index.html
+++ b/index.html
@@ -191,13 +191,24 @@
 
     <section>
       <h2>Organizers</h2>
-      <p><strong>Prof. Absalom El-Shamir Ezugwu</strong><br>
-      North-West University, South Africa<br>
-      <a href="mailto:Absalom.ezugwu@nwu.ac.za">Absalom.ezugwu@nwu.ac.za</a></p>
 
-      <p><strong>Prof. Dr. Diego Oliva</strong><br>
-      Universidad de Guadalajara, Mexico<br>
-      <a href="mailto:diego.oliva@cucei.udg.mx">diego.oliva@cucei.udg.mx</a></p>
+      <div class="organizer">
+        <p><strong>Prof. Absalom El-Shamir Ezugwu</strong><br>
+        Unit for Data Science and Computing, North-West University, South Africa<br>
+        <a href="mailto:Absalom.ezugwu@nwu.ac.za">Absalom.ezugwu@nwu.ac.za</a></p>
+        <p style="text-align:justify;">
+          Absalom El-Shamir Ezugwu is a full Professor of Computer Science in the Unit for Data Science and Computing at North-West University, South Africa, and an NRF-rated researcher. He holds a PhD in Computer Science from Ahmadu Bello University, Nigeria. With a research focus on computational intelligence, his work leverages evolutionary computation, swarm intelligence, and deep learning to solve complex global optimization problems in engineering, logistics, agriculture, and bioinformatics. Prof. Ezugwu has a distinguished record of high-impact publications and has successfully graduated numerous MSc and PhD students. He brings significant experience in organizing special sessions, having done so for premier conferences including ICONIP, IEEE CEC, and IWANN.
+        </p>
+      </div>
+
+      <div class="organizer">
+        <p><strong>Prof. Dr. Diego Oliva</strong><br>
+        Universidad de Guadalajara (CUCEI), Mexico<br>
+        <a href="mailto:diego.oliva@cucei.udg.mx">diego.oliva@cucei.udg.mx</a></p>
+        <p style="text-align:justify;">
+          Diego Oliva, in 2007, obtained an Electronics and Computer Engineering degree from the Centro de Enseñanza Técnica Industrial (CETI), the Industrial Technical Education Center (CETI) of Guadalajara, Mexico, and the M.Sc. in Electronic Engineering and Computer Sciences from the Universidad de Guadalajara, Mexico in 2010. In 2015, he obtained a PhD in Informatics from the Universidad Complutense de Madrid (UCM) in Spain. Since 2008, he has focused his research on developing, implementing, and designing metaheuristic algorithms. He has published more than 100 papers in international journals on topics related to optimization and its implementations. Since 2015, he has been a member of the Academia Mexicana de Computacion (AMEXCOMP), and since 2022, he has been a Senior Member of the Institute of Electrical and Electronics Engineers (IEEE). Since 2017, he has been a member of the Sistema Nacional de Investigadoras e Investigadores (SNII) in Mexico. In 2022, he obtained the distinction of Highly Cited Researcher by Clarivate-Web of Science. He is among the 2% most influential researchers worldwide, according to a report published by Stanford University and Elsevier in 2024. He has been the editor and author of several books in international publishing houses, and he is the associate editor and guest editor for several specialized journals with high impact factors. He is currently a professor and researcher at the Universidad de Guadalajara (CUCEI). He also collaborates with Mexican and foreign universities in several research projects. His main research interests are artificial intelligence, metaheuristic optimization algorithms, multiobjective optimization, parameter estimation in engineering, and image and digital signal processing.
+        </p>
+      </div>
     </section>
 
     <section>
