--- a/index.html
+++ b/index.html
@@ -149,10 +149,13 @@
     <section>
       <h2>Abstract</h2>
       <p>
-        The profound transformation of the agricultural sector is imperative to meet the dual challenges of ensuring global food security and adhering to environmental sustainability. Smart Agriculture, leveraging IoT, big data, robotics, and advanced sensing, generates complex, high-dimensional data and presents multifaceted optimization problems that are dynamic, multi-objective, and constrained.
+        The profound transformation of the agricultural sector is imperative to meet the dual challenges of ensuring global food security and adhering to the principles of environmental sustainability. Smart Agriculture, leveraging the Internet of Things (IoT), big data, robotics, and advanced sensing, generates complex, high-dimensional data and presents multifaceted optimization problems that are often dynamic, multi-objective, and constrained. Classical optimization techniques frequently struggle with these real-world agricultural systems' non-linearity, uncertainty, and scale.
       </p>
       <p>
-        This special session provides a dedicated platform for showcasing cutting-edge research at the intersection of computational intelligence and modern agriculture. We invite contributions exploring how evolutionary algorithms and swarm intelligence can deliver robust, adaptive solutions across the agricultural value chain — from precision resource management to resilient supply networks.
+        This special session aims to bridge this gap by providing a dedicated platform for showcasing cutting-edge research at the intersection of computational intelligence and modern agriculture. We seek to explore how evolutionary algorithms and swarm intelligence, including but not limited to Genetic Algorithms, Particle Swarm Optimization, Ant Colony Optimization, Differential Evolution, and Evolutionary Strategies, can provide robust, efficient, and adaptive solutions for the entire agricultural value chain. The core objective is to demonstrate how these bio-inspired algorithms can translate data into actionable intelligence, optimizing for productivity, resource efficiency, economic viability, and ecological resilience.
+      </p>
+      <p>
+        We invite contributions that present novel solutions and compelling case studies that clearly articulate the unique advantages of evolutionary and swarm-based methods in tackling the intricate challenges of building a smarter and more sustainable agricultural future.
       </p>
     </section>
 
