--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
       position: relative;
     }
 
-    header img.logo {
-      height: auto;
-      margin: 0 15px;
+     header img.logo {
+      height: 100px;
+      margin: 0 20px;
       vertical-align: middle;
     }
 
     header .logos {
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-end;
       flex-wrap: wrap;
       gap: 1rem;
       margin-bottom: 1rem;
