--- a/index.html
+++ b/index.html
@@ -148,31 +148,34 @@
   <main>
     <section>
       <h2>Abstract</h2>
-      <p>
+      <p style="text-align:justify;">
         The profound transformation of the agricultural sector is imperative to meet the dual challenges of ensuring global food security and adhering to the principles of environmental sustainability. Smart Agriculture, leveraging the Internet of Things (IoT), big data, robotics, and advanced sensing, generates complex, high-dimensional data and presents multifaceted optimization problems that are often dynamic, multi-objective, and constrained. Classical optimization techniques frequently struggle with these real-world agricultural systems' non-linearity, uncertainty, and scale.
       </p>
-      <p>
+      <p style="text-align:justify;">
         This special session aims to bridge this gap by providing a dedicated platform for showcasing cutting-edge research at the intersection of computational intelligence and modern agriculture. We seek to explore how evolutionary algorithms and swarm intelligence, including but not limited to Genetic Algorithms, Particle Swarm Optimization, Ant Colony Optimization, Differential Evolution, and Evolutionary Strategies, can provide robust, efficient, and adaptive solutions for the entire agricultural value chain. The core objective is to demonstrate how these bio-inspired algorithms can translate data into actionable intelligence, optimizing for productivity, resource efficiency, economic viability, and ecological resilience.
       </p>
-      <p>
+      <p style="text-align:justify;">
         We invite contributions that present novel solutions and compelling case studies that clearly articulate the unique advantages of evolutionary and swarm-based methods in tackling the intricate challenges of building a smarter and more sustainable agricultural future.
       </p>
     </section>
 
     <section>
       <h2>Topics of Interest</h2>
+      <p>
+       The scope of this session includes both theoretical advancements and practical applications, with topics of interest including, but not limited to: 
+      </p>
       <ul>
         <li>Multi-objective optimization for site-specific irrigation, fertilization, and pesticide application</li>
         <li>Sensor placement and deployment strategies for optimal field monitoring</li>
         <li>Yield prediction and spatial data analysis using evolutionary machine learning</li>
-        <li>Path planning and task allocation for autonomous agricultural robots and UAV fleets</li>
+        <li>Path planning and task allocation for autonomous agricultural robots (Agribots) and UAV (drone) fleets</li>
         <li>Evolutionary optimization of robotic harvesting and weeding maneuvers</li>
-        <li>Optimization of harvesting schedules, storage, and logistics under uncertainty</li>
-        <li>Swarm-based models for sustainable agricultural supply chains</li>
-        <li>Feature selection and hyperparameter tuning for forecasting models</li>
+        <li>Optimization of harvesting schedules, storage allocation, and distribution logistics under uncertainty</li>
+        <li>Swarm-based models for sustainable and resilient agricultural supply chains</li>
+        <li>Feature selection and hyperparameter tuning for agricultural forecasting models</li>
         <li>Evolutionary algorithms for climate-resilient crop planning and genotype selection</li>
         <li>Constrained optimization for water-energy-food nexus management</li>
-        <li>Swarm-based techniques for monitoring and minimizing carbon footprint</li>
+        <li>Swarm-based techniques for monitoring and minimizing carbon footprint and agrochemical runoff</li>
       </ul>
     </section>
 
