--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <p>
         Accepted and presented papers will be published in the official IEEE CEC 2026 proceedings and submitted for inclusion in the IEEE Xplore Digital Library.
       </p>
-      <a href="https://wcci2026.org/" target="_blank" class="btn-submit">Submit Paper via IEEE CEC 2026 Portal</a>
+      <a href="https://attend.ieee.org/wcci-2026/call-for-papers/" target="_blank" class="btn-submit">Submit Paper via IEEE CEC 2026 Portal</a>
     </section>
 
     <section>
