--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
      header img.logo {
-      height: auto;
+      height: 900px;
       margin: 0 60px;
       vertical-align: middle;
     }
