--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
         <li>Prof. Apu K. Saha, NIT Agartala, India</li>
         <li>Dr. Andronicus Akinyelu Ayobami, University of KwaZulu-Natal, South Africa</li>
         <li>Prof. Samarjit Kar, NIT Durgapur, India</li>
+        <li>Dr. Mario A. Navarro, Universidad de Guadalajara, Mexico</li>
+        <li>Dr. Seyed Jalaleddin Mousavirad. Mid Sweden University, Sweden</li>
+        <li>Dr. Folasade O. Isinkaye, Ekiti State University, Nigeria</li>
       </ul>
     </section>
   </main>
