--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
         <li>Dr. Mario A. Navarro, Universidad de Guadalajara, Mexico</li>
         <li>Dr. Seyed Jalaleddin Mousavirad. Mid Sweden University, Sweden</li>
         <li>Dr. Folasade O. Isinkaye, Ekiti State University, Nigeria</li>
+        <li>Prof. Erik Cuevas, Universidad de Guadalajara, Mexico</li>
+        <li>Dr. Ikoutn M. Abiodun, University of KwaZulu-Natal, South Africa </li>
       </ul>
     </section>
   </main>
